Make some sizes depend on font size to correct layout problems

--- a/css/main.scss
+++ b/css/main.scss
@@ -439,7 +439,7 @@ pre {
     background-image: url('/img/warning.svg');
     background-repeat: no-repeat;
     background-position: 8px 8px;
-    background-size: 20px 20px;
+    background-size: 1.5em 1.5em;
     background-color: #fff0f0;
 }
 
@@ -449,7 +449,7 @@ pre {
     background-image: url('/img/wip.png');
     background-repeat: no-repeat;
     background-position: 8px 8px;
-    background-size: 20px 20px;
+    background-size: 1.5em 1.5em;
     background-color: #f0f0ff;
 }
 
@@ -459,7 +459,7 @@ pre {
     background-image: url('/img/info.svg');
     background-repeat: no-repeat;
     background-position: 8px 8px;
-    background-size: 20px 20px;
+    background-size: 1.5em 1.5em;
     background-color: #fff0e0;
 }
 
@@ -1080,7 +1080,7 @@ div.install a svg {
 
 .user {
     display: grid;
-    grid-template-rows: 80px 40px 1fr 80px;
+    grid-template-rows: 80px 5.8ex 1fr 12ex;
     border: 1px solid $osm2pgsql-color-dark;
     border-radius: 4px;
     box-shadow: 6px 10px 10px $osm2pgsql-color-box-border-hover;
@@ -1122,7 +1122,7 @@ div.install a svg {
 .user ul {
     margin: 0;
     background-color: $osm2pgsql-color-box-fill;
-    padding: 10px 10px 10px 28px;
+    padding: 10px 10px 10px 2em;
     border-top: 1px solid $osm2pgsql-color-box-border;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
